--- a/fit-text.html
+++ b/fit-text.html
@@ -62,7 +62,7 @@ Example:
 
 		kompressor: {
 			type: Number,
-			value: 0.9,		
+			value: 1,		
 		},
     },
 
@@ -137,8 +137,8 @@ Example:
                 line.style.height     = 'auto';
                 line.style.width      = el.clientWidth + "px";
                 line.style.whiteSpace = 'nowrap';
-                line.style.fontSize   = line_font_size + "px";
-                line.style.lineHeight = ( line_font_size * 1.3 ) + "px";
+                line.style.fontSize   = ( line_font_size * these.kompressor ) + "px";
+                line.style.lineHeight = ( line_font_size * 1.3 * these.kompressor ) + "px";
 
             }
 
