Better max_font-Handling and height

--- a/demo/index.html
+++ b/demo/index.html
@@ -44,6 +44,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </div>
 
 
+    <div style="width:100px; height: 100px; background: #eee">
+        <fit-text>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+            <span>Hallo welt</span>
+         </fit-text>
+    </div>
+
+
     <div style="width:200px; height: 200px; background: #eee">
         <fit-text><span>Bad-Frankenhausen</span></fit-text>
     </div>
