--- a/fit-text.html
+++ b/fit-text.html
@@ -64,6 +64,13 @@ Example:
 			type: Number,
 			value: 1,		
 		},
+
+        lineHeightFactor: {
+
+			type: Number,
+			value: 1.5,		
+		},
+
     },
 
     // Element Lifecycle
@@ -95,15 +102,29 @@ Example:
 
 		var el = these;
 
+        var parent = el.parentElement;
+
+        el.style.width  = parent.style.width;
+        el.style.height = parent.style.height;
+
         el.style.position = 'relative';
+        el.style.overflow = 'hidden';
 
         var height = el.clientHeight;
         var width  = el.clientWidth;
 
         var lines = Polymer.dom(these).children;
 
-        var max_font_size_by_line = height / lines.length / 1.3;
+        var max_font_size_by_line   = height / ( lines.length * these.lineHeightFactor );
         var max_line_height_by_line = height / lines.length;
+
+        if ( 0 ) { 
+            console.log("-------");
+            console.log(height);
+            console.log(lines.length);
+            console.log(max_font_size_by_line);
+
+        }
 
         if ( lines.length == 0 ) { 
 
@@ -126,8 +147,14 @@ Example:
                 max_line_width = Math.max(max_line_width, line.clientWidth);
             }
 
+
+            // console.log("Max width " + max_line_width);
+
+
             var line_font_size = max_font_size_by_line *  parseFloat(width / max_line_width);
         
+            // console.log("Line font size " + line_font_size);
+
             for (var i = 0; i < lines.length; i++) {
 
                 var line = lines[i];
@@ -137,8 +164,8 @@ Example:
                 line.style.height     = 'auto';
                 line.style.width      = el.clientWidth + "px";
                 line.style.whiteSpace = 'nowrap';
-                line.style.fontSize   = ( line_font_size * these.kompressor ) + "px";
-                line.style.lineHeight = ( line_font_size * 1.3 * these.kompressor ) + "px";
+                line.style.fontSize   = ( ( line_font_size > max_font_size_by_line ?  max_font_size_by_line : line_font_size ) * these.kompressor ) + "px";
+                line.style.lineHeight = (( line_font_size > max_font_size_by_line ?  max_font_size_by_line : line_font_size ) * these.lineHeightFactor * these.kompressor ) + "px";
 
             }
 
