Prevent cutting chars

--- a/fit-text.html
+++ b/fit-text.html
@@ -108,7 +108,7 @@ Example:
         el.style.height = parent.clientHeight + "px";
 
         el.style.position = 'relative';
-        el.style.overflow = 'hidden';
+        // el.style.overflow = 'hidden';
 
         var height = el.clientHeight;
         var width  = el.clientWidth;
